Update Dockerfile remove java options UseCGroupMemoryLimitForHeap